# python-fastapi-cookbook

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.db
ch01/bookstore/: main.py  models.py  router.py
ch01/fastapi_start/: main.py  router_example.py
ch02/async_example/: main.py  timing_api_calls.py
ch02/sql_example/: database.py  main.py
ch02/uploads_and_downloads/: main.py
ch03/task_manager_app/: conftest.py  main.py  models.py  operations.py  security.py  tasks.csv  test_main.py  test_operatoins.py
ch04/: .pre-commit-config.yaml  passwd.txt
ch04/saas_app/: basic_access.py  conftest.py  db_connection.py  github_login.py  main.py  mfa.py  models.py  operations.py  orm_entity.py  premium_access.py  rbac.py  response.py  security.py  test_main.py  test_operation.py  third_party_login.py  user_sess.py
ch05/protoapp/: Makefile  locustfile.py  pytest.ini  run_server.py
ch05/protoapp/protoapp/: database.py  main.py
ch05/protoapp/tests/: conftest.py  test_main.py
ch06/ticketing_system/: Makefile  README.md
ch06/ticketing_system/alembic/: env.py
ch06/ticketing_system/alembic/versions/: 2033f52cf6be_start_database.py  5afd83cfc7fd_add_ticket_details_one_to_one.py  ae2c96f0314c_create_events_and_many_to_one.py  bbe7546b39ed_create_sponsorships_for_many_to_many.py  ee977cc710a1_add_sold_field.py
ch06/ticketing_system/app/: database.py  db_connection.py  main.py  operations.py  security.py
ch06/ticketing_system/tests/: conftest.py  test_operations.py  test_security.py
ch08/trip_platform/: Makefile  profiler.html  profiler2.json
ch08/trip_platform/app/: dependencies.py  internationalization.py  main.py  middleware.py  profiler.py
ch08/trip_platform/tests/: test_main.py
ch09/chat_platform/: benchmark_websocket.py
ch09/chat_platform/app/: chat.py  main.py  security.py  ws_manager.py  ws_password_bearer.py
ch10/grpc_gateway/: Makefile  grpcserver.py
ch10/grpc_gateway/app/: main.py
ch10/grpc_gateway/proto/: grpcserver.proto
ch11/mw_project/: main.py
ch11/mw_project/middleware/: asgi_middleware.py  request_middleware.py  webhook.py
