[tool.poetry]
name = "python-fastapi-cookbook"
version = "0.1.0"
description = ""
authors = ["Benny Cheng <benny_cheng@leadtek.com.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.115.8" }
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
pydantic = { extras = ["email"], version = "^2.10.6" }


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.0"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
pytest = "^8.3.4"

[tool.black]
line-length = 100
skip-string-normalization = false
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]

[tool.mypy]
python_version = "3.11"
# strict = true
# disallow_untyped_defs = true
# disallow_untyped_calls = true
# disallow_any_generics = true
ignore_missing_imports = true
# warn_return_any = true
# warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
